# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../callmanager.gni")

ohos_unittest("tel_call_manager_special1_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_manager_special_test"
  module_out_path = part_name + "/" + part_name + "/" + test_module
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "${call_manager_path}/frameworks/native/src/call_manager_service_proxy.cpp",
    "src/special_branch0_test.cpp",
    "src/special_branch1_test.cpp",
  ]

  sources += call_manager_sources

  include_dirs = [
    "${call_manager_path}/interfaces/innerkits",
    "${call_manager_path}/test/unittest/call_manager_gtest/include",
    "include",
  ]

  include_dirs += call_manager_include_dirs

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_deps_wrapper",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libprivacy_sdk",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_foundation",
    "audio_framework:audio_renderer",
    "audio_framework:audio_toneplayer",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "device_manager:devicemanagersdk",
    "distributed_notification_service:ans_innerkits",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "init:libbegetutil",
    "input:libmmi-client",
    "ipc:ipc_single",
    "libphonenumber:phonenumber_standard",
    "location:lbsservice_common",
    "location:locator_sdk",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "os_account:os_account_innerkits",
    "player_framework:system_sound_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "${call_manager_path}/frameworks/native:tel_call_manager_api" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerSpecialTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  defines += call_manager_defines
  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_bluetooth) &&
      global_parts_info.communication_bluetooth) {
    external_deps += [ "bluetooth:btframework" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_sms_mms) &&
      global_parts_info.telephony_sms_mms) {
    external_deps += [ "sms_mms:tel_sms_mms_api" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager) &&
      global_parts_info.powermgr_power_manager) {
    external_deps += [ "power_manager:powermgr_client" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.sensors_miscdevice) &&
      global_parts_info.sensors_miscdevice) {
    external_deps += [ "miscdevice:vibrator_interface_native" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_cellular_data) &&
      global_parts_info.telephony_cellular_data) {
    external_deps += [ "cellular_data:tel_cellular_data_api" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.hiviewdfx_hicollie) &&
      global_parts_info.hiviewdfx_hicollie) {
    external_deps += [ "hicollie:libhicollie" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.theme_screenlock_mgr) &&
      global_parts_info.theme_screenlock_mgr) {
    external_deps += [ "screenlock_mgr:screenlock_client" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.multimedia_camera_framework) &&
      global_parts_info.multimedia_camera_framework) {
    external_deps += [ "camera_framework:camera_framework" ]
  }
}

ohos_unittest("tel_call_manager_special2_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_manager_special_test"
  module_out_path = part_name + "/" + part_name + "/" + test_module
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "${call_manager_path}/frameworks/native/src/call_manager_service_proxy.cpp",
    "src/special_branch2_test.cpp",
  ]

  sources += call_manager_sources

  include_dirs = [
    "${call_manager_path}/interfaces/innerkits",
    "${call_manager_path}/test/unittest/call_manager_gtest/include",
    "include",
  ]

  include_dirs += call_manager_include_dirs

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_deps_wrapper",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libprivacy_sdk",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_foundation",
    "audio_framework:audio_renderer",
    "audio_framework:audio_toneplayer",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "device_manager:devicemanagersdk",
    "distributed_notification_service:ans_innerkits",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "init:libbegetutil",
    "input:libmmi-client",
    "ipc:ipc_single",
    "libphonenumber:phonenumber_standard",
    "location:lbsservice_common",
    "location:locator_sdk",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "os_account:os_account_innerkits",
    "player_framework:system_sound_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "${call_manager_path}/frameworks/native:tel_call_manager_api" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerSpecialTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  defines += call_manager_defines
  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_bluetooth) &&
      global_parts_info.communication_bluetooth) {
    external_deps += [ "bluetooth:btframework" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_sms_mms) &&
      global_parts_info.telephony_sms_mms) {
    external_deps += [ "sms_mms:tel_sms_mms_api" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager) &&
      global_parts_info.powermgr_power_manager) {
    external_deps += [ "power_manager:powermgr_client" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.sensors_miscdevice) &&
      global_parts_info.sensors_miscdevice) {
    external_deps += [ "miscdevice:vibrator_interface_native" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_cellular_data) &&
      global_parts_info.telephony_cellular_data) {
    external_deps += [ "cellular_data:tel_cellular_data_api" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.hiviewdfx_hicollie) &&
      global_parts_info.hiviewdfx_hicollie) {
    external_deps += [ "hicollie:libhicollie" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.theme_screenlock_mgr) &&
      global_parts_info.theme_screenlock_mgr) {
    external_deps += [ "screenlock_mgr:screenlock_client" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.multimedia_camera_framework) &&
      global_parts_info.multimedia_camera_framework) {
    external_deps += [ "camera_framework:camera_framework" ]
  }
}

ohos_unittest("tel_call_manager_special3_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_manager_special_test"
  module_out_path = part_name + "/" + part_name + "/" + test_module
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "${call_manager_path}/frameworks/native/src/call_manager_service_proxy.cpp",
    "${call_manager_path}/frameworks/native/src/call_manager_proxy.cpp",
    "src/special_branch3_test.cpp",
  ]

  sources += call_manager_sources

  include_dirs = [
    "${call_manager_path}/interfaces/innerkits",
    "${call_manager_path}/test/unittest/call_manager_gtest/include",
    "include",
  ]

  include_dirs += call_manager_include_dirs

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_deps_wrapper",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libprivacy_sdk",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_foundation",
    "audio_framework:audio_renderer",
    "audio_framework:audio_toneplayer",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "device_manager:devicemanagersdk",
    "distributed_notification_service:ans_innerkits",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "init:libbegetutil",
    "input:libmmi-client",
    "ipc:ipc_single",
    "libphonenumber:phonenumber_standard",
    "location:lbsservice_common",
    "location:locator_sdk",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "os_account:os_account_innerkits",
    "player_framework:system_sound_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "${call_manager_path}/frameworks/native:tel_call_manager_api" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerSpecialTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  defines += call_manager_defines
  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_bluetooth) &&
      global_parts_info.communication_bluetooth) {
    external_deps += [ "bluetooth:btframework" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_sms_mms) &&
      global_parts_info.telephony_sms_mms) {
    external_deps += [ "sms_mms:tel_sms_mms_api" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager) &&
      global_parts_info.powermgr_power_manager) {
    external_deps += [ "power_manager:powermgr_client" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.sensors_miscdevice) &&
      global_parts_info.sensors_miscdevice) {
    external_deps += [ "miscdevice:vibrator_interface_native" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_cellular_data) &&
      global_parts_info.telephony_cellular_data) {
    external_deps += [ "cellular_data:tel_cellular_data_api" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.hiviewdfx_hicollie) &&
      global_parts_info.hiviewdfx_hicollie) {
    external_deps += [ "hicollie:libhicollie" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.theme_screenlock_mgr) &&
      global_parts_info.theme_screenlock_mgr) {
    external_deps += [ "screenlock_mgr:screenlock_client" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.multimedia_camera_framework) &&
      global_parts_info.multimedia_camera_framework) {
    external_deps += [ "camera_framework:camera_framework" ]
  }
}