# Copyright (C) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../callmanager.gni")
CALL_MANAGER_PATH = "../../.."

ohos_unittest("tel_call_voice_assistant_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_voice_assistant_test"
  module_out_path = part_name + "/" + part_name + "/" + test_module
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "${CALL_MANAGER_PATH}/frameworks/native/src/call_manager_service_proxy.cpp",
    "src/call_voice_assistant_test.cpp",
  ]
  sources += call_manager_sources

  include_dirs = [
    "${CALL_MANAGER_PATH}/interfaces/innerkits",
    "./include",
  ]
  include_dirs += call_manager_include_dirs

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "core_service:ffrt_mocked",
    "libphonenumber:phonenumber_standard",
    "libphonenumber:geocoding",
    "protobuf:protobuf",
  ]
  external_deps += call_manager_external_deps
  external_deps -= ["ffrt:libffrt"]

  deps = [
    "${CALL_MANAGER_PATH}/test/unittest:call_manager_test_base",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}
