# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../callmanager.gni")

ohos_unittest("tel_motion_recognition_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_motion_recognition_test"
  module_out_path = part_name + "/" + part_name + "/" + test_module
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "src/motion_recognition_test.cpp",
  ]

  sources += call_manager_sources

  include_dirs = [
    "${call_manager_path}/interfaces/innerkits",
    "${call_manager_path}/utils/include",
    "${call_manager_path}/services/audio/include",
    "${call_manager_path}/services/call/include",
    "${call_manager_path}/frameworks/native/include",
  ]

  include_dirs += call_manager_include_dirs

  external_deps = [
    "ability_base:base",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "core_service:ffrt_mocked",
    "c_utils:utils",
    "core_service:libtel_common",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "libphonenumber:phonenumber_standard",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  external_deps += call_manager_external_deps
  external_deps -= ["ffrt:libffrt"]

  deps = [
    "${CALL_MANAGER_PATH}/test/unittest:call_manager_test_base",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  defines = [
    "TELEPHONY_LOG_TAG = \"MotionRecognitionTest\"",
    "LOG_DOMAIN = 0xD000F00",
    "OHOS_SUBSCRIBE_MOTION_ENABLE",
  ]

  defines += call_manager_defines
}
