# Copyright (C) 2024-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../callmanager.gni")
CALL_MANAGER_PATH = "../../.."

sources = []
ohos_unittest("rtt_call_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "rtt_call_test"
  module_out_path = part_name + "/" + test_module
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "src/rtt_call_test.cpp",
    "${CALL_MANAGER_PATH}/frameworks/js/napi/src/napi_call_manager.cpp",
    "${CALL_MANAGER_PATH}/frameworks/js/napi/src/napi_call_manager_utils.cpp",
    "${CALL_MANAGER_PATH}/frameworks/js/napi/src/napi_call_ability_callback.cpp",
    "${CALL_MANAGER_PATH}/frameworks/js/napi/src/napi_call_manager_callback.cpp",
  ]

  sources += call_manager_sources

  include_dirs = [
    "${CALL_MANAGER_PATH}/frameworks/js/napi/include",
  ]
  include_dirs += call_manager_include_dirs

  external_deps = [
    "cJSON:cjson",
    "core_service:ffrt_mocked",
    "libphonenumber:phonenumber_standard",
  ]
  external_deps += call_manager_external_deps
  external_deps -= ["ffrt:libffrt"]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  deps = [
    "${CALL_MANAGER_PATH}/test/unittest:call_manager_test_base",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerGtest\"",
    "LOG_DOMAIN = 0xD000F00",
    "private = public",
    "protected = public",
    "ABILITY_BLUETOOTH_SUPPORT = 0x1",
  ]
}
